# FeedBack-Backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  feedback-config.yaml.json  go.mod  go.sum  main.go  wire.go  wire_gen.go
.github/workflows/: dev.yml  go.yml  prod.yml
ai/: ai.go
ai/tools/: es.go
api/request/: auth.go  like.go  (+3 more)
config/: conf.go  config.yaml  example_config.yaml
controller/: ai.go  auth.go  chat.go  controller.go  health_check.go  like.go  message.go  oauth.go  sheet.go  sheet_test.go  sheet_v2.go  swag.go
docs/: docs.go  openapi.go  openapi3.yaml  swagger.json  swagger.yaml
domain/: chat.go  message.go  sheet.go
embdservice/: .dockerignore  Dockerfile  main.py  requirements.txt  script.py
errs/: README.md  business.go  errs.go  system.go  thirdparty.go
ioc/: ai.go  es.go  feishu.go  ioc.go  llm.go  log.go  mysql.go  prometheus.go  redis.go
llm/: llm.go
llmservice/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  script.py
llmservice/models/gte-small-zh-int8/: config.json  tokenizer_config.json
llmservice/models/nli-mini-int8/: config.json
middleware/: auth_middleware.go  basicAuth_middleware.go  cors_middleware.go  limit_middleware.go  log_middleware.go  prometheus_middleware.go
model/: like.go  swag.go
repository/: repository.go
service/: ai.go  auth.go  chat.go  health_check.go  like.go  message.go  oauth.go  service.go  sheet.go  swag.go  table.go
web/: ai.go  auth.go  health_check.go  like.go  llm.go  message.go  oauth.go  sheet.go  sheet_v2.go  swag.go  web.go
(+86 files in other folders)
