[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[project]
name = "llmservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.19.0",
    "transformers==4.47.1",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]
